# hooligan

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  deny.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  publish.yml
src/: config.rs  local_player_moderations.rs  logging.rs  main.rs  transaction.rs
tests/: fs.rs
