[package]
name = "hooligan"
version = "1.1.0"
edition = "2024"
authors = ["Michael Ripley <zkxs00@gmail.com"]
license = "GPL-3.0-only"
description = "Manages VRChat LocalPlayerModerations file"
readme = "README.md"
repository = "https://github.com/zkxs/hooligan"
keywords = ["vrchat"]
categories = []

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[dependencies]
directories = "6"
