[package]
name = "hooligan"
version = "2.1.0"
edition = "2024"
authors = ["Michael Ripley <zkxs00@gmail.com"]
license = "GPL-3.0-only"
description = "Manages VRChat LocalPlayerModerations file"
readme = "README.md"
repository = "https://github.com/zkxs/hooligan"
keywords = ["vrchat"]
categories = []

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.release-optimized-debug]
inherits = "release"
strip = false # required for `cargo-bloat`
debug = true # required for `cargo flamegraph`, and makes `cargo-bloat` output significantly better

[dependencies]
bstr = "1"
directories = "6"
fd-lock = "4"
jiff = { version = "0.2", default-features = false, features = ["std"] }

[dev-dependencies]
rand = "0.9"
